--- a/scilab/modules/elementary_functions/src/c/elementary_functions.vcxproj.filters
+++ b/scilab/modules/elementary_functions/src/c/elementary_functions.vcxproj.filters
@@ -203,6 +203,9 @@
     <ClCompile Include="..\cpp\min.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\cpp\sum.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\includes\dynlib_elementary_functions.h">
@@ -338,6 +341,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="expm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\cpp\sum.hxx">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
