--- a/scilab/modules/elementary_functions/Makefile.am
+++ b/scilab/modules/elementary_functions/Makefile.am
@@ -57,6 +57,7 @@ ELEMENTARIES_FUNCTIONS_CXX_SOURCES = \
     src/cpp/cumprod.cpp \
     src/cpp/diag.cpp \
     src/cpp/gsort.cpp \
+    src/cpp/sum.cpp \
     src/cpp/max.cpp \
     src/cpp/min.cpp
 
