--- a/scilab/etc/modules.xml.in
+++ b/scilab/etc/modules.xml.in
@@ -50,5 +50,6 @@
     <module name="interpolation" activate="yes"/>
     <module name="cacsd" activate="yes"/>
     <module name="sound" activate="yes"/>
+    <module name="special_functions" activate="yes"/>
 </modules>
 
