WIP: call fortran
Change-Id: I866139fedeef3a4be726b68c08b46d753c45377d

--- a/scilab/modules/string/Makefile.am
+++ b/scilab/modules/string/Makefile.am
@@ -28,6 +28,7 @@ src/c/StringConvert.c \
 src/c/os_wcsdup.c \
 src/c/os_wcstok.c \
 src/c/scistrtostr.c \
+src/c/code2str.c \
 src/c/stringToDouble.c
 
 STRING_FORTRAN_SOURCES =
