--- a/scilab/modules/system_env/system_env.vcxproj.filters
+++ b/scilab/modules/system_env/system_env.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="src\cpp\formatmode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\cpp\context_get.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="includes\configvariable.hxx">
@@ -87,6 +90,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="includes\formatmode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\context_get.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
