--- a/scilab/modules/types/Makefile.in
+++ b/scilab/modules/types/Makefile.in
@@ -169,7 +169,7 @@ am__libscitypes_algo_la_SOURCES_DIST = src/cpp/types.cpp \
 	src/cpp/int32.cpp src/cpp/uint32.cpp src/cpp/int64.cpp \
 	src/cpp/uint64.cpp src/cpp/sparse.cpp \
 	src/cpp/graphichandle.cpp src/cpp/types_tools.cpp \
-	src/cpp/inspector.cpp
+	src/cpp/ContextStackInterface.cpp src/cpp/inspector.cpp
 @ENABLE_DEBUG_TRUE@am__objects_1 = libscitypes_algo_la-inspector.lo
 am__objects_2 = libscitypes_algo_la-types.lo \
 	libscitypes_algo_la-string.lo libscitypes_algo_la-double.lo \
@@ -195,7 +195,8 @@ am__objects_2 = libscitypes_algo_la-types.lo \
 	libscitypes_algo_la-int64.lo libscitypes_algo_la-uint64.lo \
 	libscitypes_algo_la-sparse.lo \
 	libscitypes_algo_la-graphichandle.lo \
-	libscitypes_algo_la-types_tools.lo $(am__objects_1)
+	libscitypes_algo_la-types_tools.lo \
+	libscitypes_algo_la-ContextStackInterface.lo $(am__objects_1)
 am_libscitypes_algo_la_OBJECTS = $(am__objects_2)
 libscitypes_algo_la_OBJECTS = $(am_libscitypes_algo_la_OBJECTS)
 libscitypes_java_la_DEPENDENCIES =  \
@@ -659,7 +660,7 @@ TYPES_CPP_SOURCES = src/cpp/types.cpp src/cpp/string.cpp \
 	src/cpp/int32.cpp src/cpp/uint32.cpp src/cpp/int64.cpp \
 	src/cpp/uint64.cpp src/cpp/sparse.cpp \
 	src/cpp/graphichandle.cpp src/cpp/types_tools.cpp \
-	$(am__append_2)
+	src/cpp/ContextStackInterface.cpp $(am__append_2)
 TYPES_JAVA_CPP_SOURCES = src/cpp/ScilabToJava.cpp \
 	            src/jni/ScilabVariables.cpp \
 	            src/jni/ScilabVariablesRefresh.cpp \
@@ -711,6 +712,7 @@ libscitypes_la_CPPFLAGS = \
 	-I$(top_srcdir)/modules/string/includes \
 	-I$(top_srcdir)/modules/threads/includes \
     -I$(top_srcdir)/libs/dynamiclibrary/includes \
+    -I$(top_srcdir)/libs/string/includes \
 	-I src/cpp \
     $(EIGEN_CPPFLAGS) \
 	$(AM_CPPFLAGS)
@@ -856,6 +858,7 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscitypes_algo_la-ContextStackInterface.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscitypes_algo_la-arrayof.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscitypes_algo_la-bool.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscitypes_algo_la-cell.Plo@am__quote@
@@ -1230,6 +1233,13 @@ libscitypes_algo_la-types_tools.lo: src/cpp/types_tools.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/cpp/types_tools.cpp' object='libscitypes_algo_la-types_tools.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(LIBTOOL)  --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscitypes_algo_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libscitypes_algo_la-types_tools.lo `test -f 'src/cpp/types_tools.cpp' || echo '$(srcdir)/'`src/cpp/types_tools.cpp
+
+libscitypes_algo_la-ContextStackInterface.lo: src/cpp/ContextStackInterface.cpp
+@am__fastdepCXX_TRUE@	$(LIBTOOL)  --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscitypes_algo_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libscitypes_algo_la-ContextStackInterface.lo -MD -MP -MF $(DEPDIR)/libscitypes_algo_la-ContextStackInterface.Tpo -c -o libscitypes_algo_la-ContextStackInterface.lo `test -f 'src/cpp/ContextStackInterface.cpp' || echo '$(srcdir)/'`src/cpp/ContextStackInterface.cpp
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/libscitypes_algo_la-ContextStackInterface.Tpo $(DEPDIR)/libscitypes_algo_la-ContextStackInterface.Plo
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/cpp/ContextStackInterface.cpp' object='libscitypes_algo_la-ContextStackInterface.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(LIBTOOL)  --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscitypes_algo_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libscitypes_algo_la-ContextStackInterface.lo `test -f 'src/cpp/ContextStackInterface.cpp' || echo '$(srcdir)/'`src/cpp/ContextStackInterface.cpp
 
 libscitypes_algo_la-inspector.lo: src/cpp/inspector.cpp
 @am__fastdepCXX_TRUE@	$(LIBTOOL)  --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscitypes_algo_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libscitypes_algo_la-inspector.lo -MD -MP -MF $(DEPDIR)/libscitypes_algo_la-inspector.Tpo -c -o libscitypes_algo_la-inspector.lo `test -f 'src/cpp/inspector.cpp' || echo '$(srcdir)/'`src/cpp/inspector.cpp
