--- a/scilab/modules/types/types.vcxproj.filters
+++ b/scilab/modules/types/types.vcxproj.filters
@@ -123,11 +123,20 @@
     <ClCompile Include="src\cpp\graphichandle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\cpp\ContextStackInterface.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile.am" />
     <None Include="types.iss" />
     <None Include="locales\types.pot" />
+    <None Include="core_Import.def">
+      <Filter>Librairies Dependencies</Filter>
+    </None>
+    <None Include="string_Import.def">
+      <Filter>Librairies Dependencies</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="includes\alltypes.hxx">
@@ -272,6 +281,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="includes\user.hxx">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\ContextStackInterface.hxx">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
