--- a/scilab/modules/types/types.vcxproj.filters
+++ b/scilab/modules/types/types.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source Files">
@@ -15,6 +15,12 @@
     </Filter>
     <Filter Include="Librairies Dependencies">
       <UniqueIdentifier>{0ce68b4c-0065-4309-a41f-ff4adac50c20}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\stackapi">
+      <UniqueIdentifier>{6ab09291-1a34-41fa-a96c-84aa9dad2d68}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\stackapi">
+      <UniqueIdentifier>{8f5e2981-6470-49c5-ad93-1bb88f8ea48c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -123,11 +129,53 @@
     <ClCompile Include="src\cpp\graphichandle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\cpp\ContextStackInterface.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\stackapi\stackapi_boolean.cpp">
+      <Filter>Source Files\stackapi</Filter>
+    </ClCompile>
+    <ClCompile Include="src\stackapi\stackapi_boolean_sparse.cpp">
+      <Filter>Source Files\stackapi</Filter>
+    </ClCompile>
+    <ClCompile Include="src\stackapi\stackapi_common.cpp">
+      <Filter>Source Files\stackapi</Filter>
+    </ClCompile>
+    <ClCompile Include="src\stackapi\stackapi_double.cpp">
+      <Filter>Source Files\stackapi</Filter>
+    </ClCompile>
+    <ClCompile Include="src\stackapi\stackapi_error.cpp">
+      <Filter>Source Files\stackapi</Filter>
+    </ClCompile>
+    <ClCompile Include="src\stackapi\stackapi_int.cpp">
+      <Filter>Source Files\stackapi</Filter>
+    </ClCompile>
+    <ClCompile Include="src\stackapi\stackapi_list.cpp">
+      <Filter>Source Files\stackapi</Filter>
+    </ClCompile>
+    <ClCompile Include="src\stackapi\stackapi_pointer.cpp">
+      <Filter>Source Files\stackapi</Filter>
+    </ClCompile>
+    <ClCompile Include="src\stackapi\stackapi_poly.cpp">
+      <Filter>Source Files\stackapi</Filter>
+    </ClCompile>
+    <ClCompile Include="src\stackapi\stackapi_sparse.cpp">
+      <Filter>Source Files\stackapi</Filter>
+    </ClCompile>
+    <ClCompile Include="src\stackapi\stackapi_string.cpp">
+      <Filter>Source Files\stackapi</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile.am" />
     <None Include="types.iss" />
     <None Include="locales\types.pot" />
+    <None Include="core_Import.def">
+      <Filter>Librairies Dependencies</Filter>
+    </None>
+    <None Include="string_Import.def">
+      <Filter>Librairies Dependencies</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="includes\alltypes.hxx">
@@ -279,6 +327,72 @@
     </ClInclude>
     <ClInclude Include="includes\pointer.hxx">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\ContextStackInterface.hxx">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\stackapi\stackapi_boolean.h">
+      <Filter>Header Files\stackapi</Filter>
+    </ClInclude>
+    <ClInclude Include="src\stackapi\stackapi_boolean_sparse.h">
+      <Filter>Header Files\stackapi</Filter>
+    </ClInclude>
+    <ClInclude Include="src\stackapi\stackapi_common.h">
+      <Filter>Header Files\stackapi</Filter>
+    </ClInclude>
+    <ClInclude Include="src\stackapi\stackapi_double.h">
+      <Filter>Header Files\stackapi</Filter>
+    </ClInclude>
+    <ClInclude Include="src\stackapi\stackapi_error.h">
+      <Filter>Header Files\stackapi</Filter>
+    </ClInclude>
+    <ClInclude Include="src\stackapi\stackapi_int.h">
+      <Filter>Header Files\stackapi</Filter>
+    </ClInclude>
+    <ClInclude Include="src\stackapi\stackapi_internal_boolean.h">
+      <Filter>Header Files\stackapi</Filter>
+    </ClInclude>
+    <ClInclude Include="src\stackapi\stackapi_internal_boolean_sparse.h">
+      <Filter>Header Files\stackapi</Filter>
+    </ClInclude>
+    <ClInclude Include="src\stackapi\stackapi_internal_common.h">
+      <Filter>Header Files\stackapi</Filter>
+    </ClInclude>
+    <ClInclude Include="src\stackapi\stackapi_internal_double.h">
+      <Filter>Header Files\stackapi</Filter>
+    </ClInclude>
+    <ClInclude Include="src\stackapi\stackapi_internal_int.h">
+      <Filter>Header Files\stackapi</Filter>
+    </ClInclude>
+    <ClInclude Include="src\stackapi\stackapi_internal_pointer.h">
+      <Filter>Header Files\stackapi</Filter>
+    </ClInclude>
+    <ClInclude Include="src\stackapi\stackapi_internal_poly.h">
+      <Filter>Header Files\stackapi</Filter>
+    </ClInclude>
+    <ClInclude Include="src\stackapi\stackapi_internal_sparse.h">
+      <Filter>Header Files\stackapi</Filter>
+    </ClInclude>
+    <ClInclude Include="src\stackapi\stackapi_internal_string.h">
+      <Filter>Header Files\stackapi</Filter>
+    </ClInclude>
+    <ClInclude Include="src\stackapi\stackapi_list.h">
+      <Filter>Header Files\stackapi</Filter>
+    </ClInclude>
+    <ClInclude Include="src\stackapi\stackapi_pointer.h">
+      <Filter>Header Files\stackapi</Filter>
+    </ClInclude>
+    <ClInclude Include="src\stackapi\stackapi_poly.h">
+      <Filter>Header Files\stackapi</Filter>
+    </ClInclude>
+    <ClInclude Include="src\stackapi\stackapi_scilab.h">
+      <Filter>Header Files\stackapi</Filter>
+    </ClInclude>
+    <ClInclude Include="src\stackapi\stackapi_sparse.h">
+      <Filter>Header Files\stackapi</Filter>
+    </ClInclude>
+    <ClInclude Include="src\stackapi\stackapi_string.h">
+      <Filter>Header Files\stackapi</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
