WIP: call fortran
Change-Id: I866139fedeef3a4be726b68c08b46d753c45377d

--- a/scilab/modules/system_env/Makefile.am
+++ b/scilab/modules/system_env/Makefile.am
@@ -21,7 +21,8 @@ SYSTEM_ENV_CPP_SOURCES 	= \
 	src/cpp/configvariable.cpp \
 	src/cpp/lasterror.cpp \
 	src/cpp/promptmode.cpp \
-    src/cpp/formatmode.cpp
+    src/cpp/formatmode.cpp \
+    src/cpp/context_get.cpp
 
 pkglib_LTLIBRARIES = libscisystem_env.la
 
