--- a/scilab/modules/system_env/Makefile.in
+++ b/scilab/modules/system_env/Makefile.in
@@ -118,7 +118,8 @@ am__objects_1 = libscisystem_env_la-setenvvar.lo \
 	libscisystem_env_la-configvariable.lo \
 	libscisystem_env_la-lasterror.lo \
 	libscisystem_env_la-promptmode.lo \
-	libscisystem_env_la-formatmode.lo
+	libscisystem_env_la-formatmode.lo \
+	libscisystem_env_la-context_get.lo
 am_libscisystem_env_la_OBJECTS = $(am__objects_1)
 libscisystem_env_la_OBJECTS = $(am_libscisystem_env_la_OBJECTS)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)/modules/core/includes
@@ -415,7 +416,8 @@ SYSTEM_ENV_CPP_SOURCES = \
 	src/cpp/configvariable.cpp \
 	src/cpp/lasterror.cpp \
 	src/cpp/promptmode.cpp \
-    src/cpp/formatmode.cpp
+    src/cpp/formatmode.cpp \
+    src/cpp/context_get.cpp
 
 pkglib_LTLIBRARIES = libscisystem_env.la
 libscisystem_env_la_SOURCES = $(SYSTEM_ENV_CPP_SOURCES)
@@ -519,6 +521,7 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscisystem_env_la-configvariable.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscisystem_env_la-context_get.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscisystem_env_la-formatmode.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscisystem_env_la-home.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscisystem_env_la-lasterror.Plo@am__quote@
@@ -627,6 +630,13 @@ libscisystem_env_la-formatmode.lo: src/cpp/formatmode.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/cpp/formatmode.cpp' object='libscisystem_env_la-formatmode.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(LIBTOOL)  --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscisystem_env_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libscisystem_env_la-formatmode.lo `test -f 'src/cpp/formatmode.cpp' || echo '$(srcdir)/'`src/cpp/formatmode.cpp
+
+libscisystem_env_la-context_get.lo: src/cpp/context_get.cpp
+@am__fastdepCXX_TRUE@	$(LIBTOOL)  --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscisystem_env_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libscisystem_env_la-context_get.lo -MD -MP -MF $(DEPDIR)/libscisystem_env_la-context_get.Tpo -c -o libscisystem_env_la-context_get.lo `test -f 'src/cpp/context_get.cpp' || echo '$(srcdir)/'`src/cpp/context_get.cpp
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/libscisystem_env_la-context_get.Tpo $(DEPDIR)/libscisystem_env_la-context_get.Plo
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/cpp/context_get.cpp' object='libscisystem_env_la-context_get.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(LIBTOOL)  --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscisystem_env_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libscisystem_env_la-context_get.lo `test -f 'src/cpp/context_get.cpp' || echo '$(srcdir)/'`src/cpp/context_get.cpp
 
 mostlyclean-libtool:
 	-rm -f *.lo
