--- a/scilab/modules/string/src/c/string.vcxproj
+++ b/scilab/modules/string/src/c/string.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -258,6 +258,7 @@ lib /DEF:"$(ProjectDir)System_env_Import.def" /SUBSYSTEM:WINDOWS /MACHINE:$(Plat
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="code2str.c" />
     <ClCompile Include="convstr.c" />
     <ClCompile Include="cvstr.c" />
     <ClCompile Include="DllMainString.c" />
@@ -282,6 +283,41 @@ lib /DEF:"$(ProjectDir)System_env_Import.def" /SUBSYSTEM:WINDOWS /MACHINE:$(Plat
     <ClCompile Include="strsplitfunction.c" />
     <ClCompile Include="strsubst.c" />
     <ClCompile Include="tokens.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\includes\code2str.h" />
+    <ClInclude Include="..\..\includes\os_wcstok.h" />
+    <ClInclude Include="convstr.h" />
+    <ClInclude Include="..\..\includes\cvstr.h" />
+    <ClInclude Include="..\..\includes\dynlib_string.h" />
+    <ClInclude Include="..\..\includes\getfastcode.h" />
+    <ClInclude Include="..\..\includes\gw_string.h" />
+    <ClInclude Include="..\..\includes\InitializeString.h" />
+    <ClInclude Include="isalphanum.h" />
+    <ClInclude Include="isdigit.h" />
+    <ClInclude Include="isletter.h" />
+    <ClInclude Include="..\..\includes\men_Sutils.h" />
+    <ClInclude Include="..\..\includes\os_strdup.h" />
+    <ClInclude Include="..\..\includes\os_stricmp.h" />
+    <ClInclude Include="..\..\includes\os_swprintf.h" />
+    <ClInclude Include="..\..\includes\os_wcsdup.h" />
+    <ClInclude Include="..\..\includes\os_wcsicmp.h" />
+    <ClInclude Include="partfunction.h" />
+    <ClInclude Include="pcre_error.h" />
+    <ClInclude Include="pcre_internal.h" />
+    <ClInclude Include="pcre_private.h" />
+    <ClInclude Include="..\..\includes\scistrtostr.h" />
+    <ClInclude Include="setScilabCharactersCodes.h" />
+    <ClInclude Include="..\..\includes\stricmp.h" />
+    <ClInclude Include="..\..\includes\StringConvert.h" />
+    <ClInclude Include="strcatfunction.h" />
+    <ClInclude Include="stringsCompare.h" />
+    <ClInclude Include="stringsstrrev.h" />
+    <ClInclude Include="..\cpp\stripblanks.hxx" />
+    <ClInclude Include="strsplitfunction.h" />
+    <ClInclude Include="..\..\includes\strsubst.h" />
+    <ClInclude Include="tokens.h" />
+    <ClInclude Include="ucp.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\locales\string.pot" />
